--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 header {
   margin: 30px;
-  /*border-bottom: 5px solid gray;*/
+  border-bottom: 5px solid gray;
   padding-bottom: 40px;
 }
 
@@ -17,6 +17,7 @@ main {
   margin-left: 30px;
   margin-right: 30px;
   border-bottom: 5px solid gray;
+  padding-bottom: 40px;
 }
 
 h1 {
@@ -53,14 +54,9 @@ a {
   text-decoration: none;
 }
 
-#line {
-  background: repeating-linear-gradient(
-  45deg,
-  #606dbc,
-  #606dbc 10px,
-  #465298 10px,
-  #465298 20px
-);
+#notepad {
+  height: 100%;
+  width: 100%;
 }
 
 #delicious {
@@ -127,6 +123,10 @@ a {
   font-family: Georgia;
   color: gray;
   font-size: 10px;
+}
+
+#listLeft, #listRight {
+  font-size: 12px;
 }
 
 .instructions {
